# same-day-trading-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml
fixtures/: half_day_aapl_1m.json  invalid_aapl_1m.json  kill_aapl_1m.json  messy_real_aapl_1m.json  nosignal_aapl_1m.json  or_fade_survive_0805_aapl_1m.json  or_fade_survive_0807_aapl_1m.json  or_fade_survive_0808_aapl_1m.json  or_fade_survive_0811_aapl_1m.json  or_fade_survive_0812_aapl_1m.json  or_fade_survive_0818_aapl_1m.json  or_fade_survive_0819_aapl_1m.json  or_fade_survive_0820_aapl_1m.json  orb_holdmore_0822_aapl_1m.json  orb_holdmore_0825_aapl_1m.json  orb_kill_0811_aapl_1m.json  orb_survive_0804_aapl_1m.json  orb_survive_0805_aapl_1m.json  orb_survive_0806_aapl_1m.json  orb_survive_0821_aapl_1m.json  real_aapl_2025-06-02_iex.json  real_aapl_2025-06-03_iex.json  real_aapl_2025-06-04_iex.json  real_aapl_2025-06-05_iex.json  real_aapl_2025-06-06_iex.json  real_aapl_2025-06-09_iex.json  real_aapl_2025-06-10_iex.json  real_aapl_2025-06-11_iex.json  real_aapl_2025-06-12_iex.json  real_aapl_2025-06-13_iex.json  real_aapl_2025-06-17_iex.json  real_aapl_2025-06-18_iex.json  real_aapl_2025-06-20_iex.json  real_aapl_2025-06-23_iex.json  real_aapl_2025-06-24_iex.json  real_aapl_2025-06-25_iex.json  real_aapl_2025-06-26_iex.json  real_aapl_2025-06-27_iex.json  sample_aapl_1m_day.json  survive_aapl_1m.json
same_day_lab/: __init__.py  cli.py  config.py  hashing.py  models.py  runner.py
tests/: conftest.py  test_alpaca_client.py  test_determinism.py  test_fill_models.py  (+21 more)
(+41 files in other folders)
